update: fix bug kafkaProducerConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.id.new_generator_mappings = false
+spring.jpa.properties.hibernate.id.new_generator_mappings = true
 spring.jpa.properties.hibernate.show.sql = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.generate-ddl=true
@@ -17,8 +17,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #feign.client.config.default.connect-timeout=10000
 #feign.client.config.default.read-timeout=60000
 
-external.google.storage.path=https://storage.googleapis.com/storage/v1/b/
 external.google.bucket-name=traffic.measurement.1min
 external.kafka.topic=traffic.measurement.1min
-
+kafka.group.id=traffic.measurement.1min
 kafka.address=localhost:9092
